--- a/assets/mongodb/mongod.conf
+++ b/assets/mongodb/mongod.conf
@@ -11,7 +11,7 @@ systemLog:
 
 # Where and how to store data.
 storage:
-  dbPath: /var/lib/mongo
+  dbPath: /data
   journal:
     enabled: true
 #  engine:
