コメントの位置が不正だったため修正。

--- a/docker-compose-without-ssl.yml
+++ b/docker-compose-without-ssl.yml
@@ -15,7 +15,7 @@ mongodb:
     # MongoDBのポート番号
     # 必要に応じて変更してください。
     - "27018:27017"
-  volumes:
+  # volumes:
     # MongoDBのデータを保存するディレクトリ
     # デフォルトでは、コンテナ内に作成します。(この場合、コンテナを再作成すると、データが初期化されます)
     # コメントアウトしてパスを設定することで、ホストマシンの任意のディレクトリに変更することができます。
